WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
40441
REGRESSION: Continuous wheel event deltas are way too large.
https://bugs.webkit.org/show_bug.cgi?id=40441
Summary
REGRESSION: Continuous wheel event deltas are way too large.
Dave Hyatt
Reported
2010-06-10 12:40:04 PDT
https://lists.webkit.org/pipermail/webkit-dev/2010-June/013179.html
Attachments
Patch
(5.07 KB, patch)
2010-06-10 14:03 PDT
,
Dave Hyatt
sullivan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2010-06-10 12:44:27 PDT
This is a regression from:
https://bugs.webkit.org/show_bug.cgi?id=29601
Mark Rowe (bdash)
Comment 2
2010-06-10 12:47:16 PDT
<
rdar://problem/8073715
>
Dave Hyatt
Comment 3
2010-06-10 13:07:20 PDT
Best way to handle this is to revert all the native platform code, since it was all correct and just do the minimum line clamping at DOM event generation time. That way any code in WebCore that uses wheel events natively (without exposing them to the DOM) will be accurate. This could be important when we move off NSScrollView in WebKit2 and end up using this event for wheeling.
Dave Hyatt
Comment 4
2010-06-10 13:26:54 PDT
Another possibility is to use an accumulator strategy at the DOM level and send the event once you have moved 1 full line. This would still result in no movement in response to small events until the threshold was crossed though. I am guessing a minimum line movement of 1, although it will result in slightly-too-rapid scrolling, will probably work best, but really we should just be evangelizing the Web sites, as what we were doing in Safari 4 wasn't wrong.
Dave Hyatt
Comment 5
2010-06-10 14:03:53 PDT
Created
attachment 58410
[details]
Patch This is just a straight-up backout of the fix for 29601. I will be reopening that bug once this lands.
John Sullivan
Comment 6
2010-06-10 14:05:29 PDT
Comment on
attachment 58410
[details]
Patch As I hang my head in shame, I acknowledge that the lack of this code is better than its presence, despite my earlier review.
Eric Seidel (no email)
Comment 7
2010-06-10 14:11:03 PDT
Attachment 58410
[details]
did not build on mac: Build output:
http://webkit-commit-queue.appspot.com/results/3230112
Dave Hyatt
Comment 8
2010-06-10 14:33:25 PDT
Fixed in
r60974
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug