https://bugs.webkit.org/show_bug.cgi?id=40441, back out the original fix for 29601, since it has broken continuous wheel delta values.

Reviewed by John Sullivan.

WebCore:

* platform/mac/WebCoreSystemInterface.h:
* platform/mac/WebCoreSystemInterface.mm:
* platform/mac/WheelEventMac.mm:
(WebCore::PlatformWheelEvent::PlatformWheelEvent):

WebKit/mac:

* WebView/WebDynamicScrollBarsView.mm:
(-[WebDynamicScrollBarsView scrollWheel:]):



Canonical link: https://commits.webkit.org/51989@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60974 268f45cc-cd09-0410-ab3c-d52691b4dbfc